<resources>
    <string name="app_name">ShelpApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">E-Mail:</string>
    <string name="password">Passwort:</string>
    <string name="login">Login</string>
    <string name="reg">Registrierung</string>
    <string name="pref_user_title">Benutzerdaten:</string>
    <string name="usernameSummary">Benutzername:</string>
    <string name="passwordSummary">Passwort:</string>
    <string name="title_activity_prefs">PrefsActivity</string>
    <string name="title_activity_shelp_activity">shelp_activity</string>
    <string name="title_activity_create_activity">create_activity</string>
    <string name="title_activity_search_activity">search_activity</string>
    <string name="title_activity_whishlist_activity">whishlist_activity</string>
    <string name="title_activity_tour_activity">tour_activity</string>
    <string name="title_activity_friends_activity">friends_activity</string>
    <string name="title_activity_rating_activity">rating_activity</string>
    <string name="title_activity_show_rating_activity">show_rating_activity</string>
    <string name="title_activity_search_friends_activity">search_friends_activity</string>
    <string name="title_activity_shelp_app_application">ShelpAppApplication</string>
    <string name="title_activity_own_request_activity">own_request_activity</string>
    <string name="title_activity_your_request_activity">your_request_activity</string>
    <string name="title_activity_registration_activity">registration_activity</string>
    <string name="usernameReg">E-Mail:</string>
    <string name="passwordReg">Passwort:</string>
    <string name="regConfirm">Registrieren</string>
    <string name="passwordRegConfirm">Passwort wiederholen:</string>
    <string name="userRegConfirm">Benutzername:</string>
    <string name="city">Ort</string>
    <string name="capacity">Kapazität</string>
    <string name="paymentTerms">Zahlungsbedingungen</string>
    <string name="deliveryTerms">Lieferbedingungen</string>
    <string name="date">Zeitpunkt</string>
    <string name="range">Reichweite</string>
    <string name="enabling">Freigabe</string>
    <string name="sonstiges">weitere Infos...</string>
    <string name="city_2">Wo?</string>
    <string name="searchButton">Suchen</string>
    <string name="ratingButton">Bewertung</string>
    <string name="detailsButton">Details</string>
    <string name="searchFriend">Freund hinzufügen</string>
    <string name="requestFriend">Anfragen</string>
    <string name="actualFriends">Deine Freunde</string>
    <string name="username_email">Name/E-Mail</string>
    <string name="add">Hinzufügen</string>
    <string name="rating">Bewertung</string>
    <string name="ratingText">Text:</string>
    <string name="sendRating">abschicken</string>
    <string name="wish">Kurztext</string>
    <string name="productWish">Produkt</string>
<<<<<<< HEAD
    <string name="newTextView">weitere +</string>
    <string name="requestWishList">Anfragen</string>

=======
    <string name="newTextView">weiter +</string>
    <string name="own_request">Deine angefragten Fahrten</string>
    <string name="editButton">Bearbeiten</string>
    <string name="deleteButton">Löschen</string>
    <string name="status">Status</string>
    <string name="tour">Fahrt</string>
    <string name="yourTour">Deine Fahrten</string>
    <string name="createTour">Erstelle deine Fahrt..</string>
>>>>>>> 1cf06a2b7d69cbcb487e43a6fa5957f05552f77d

    <string-array name="citySpinner">
        <item>Münster</item>
        <item>Rheine</item>
        <item>Steinfurt</item>
    </string-array>

    <string-array name="capacitySpinner">
        <item>Kofferraum</item>
        <item>Mittelbank</item>
        <item>Beifahrersitz</item>
        <item>Fahrradkorb</item>
    </string-array>

    <string-array name="enablingSpinner">
        <item>Freunde</item>
        <item>Öffentlich</item>
    </string-array>


    <string-array name="rangeSpinner">
        <item>500 Meter</item>
        <item>2 Kilometer</item>
        <item>5 Kilometer</item>
        <item>10 Kilometer</item>
    </string-array>
    <string name="title_activity_show_tour_activity">show_tour_activity</string>


</resources>
