<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.fh_muenster.shelpapp.ShelpAppAndroid.tour_activity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tour"
        android:id="@+id/viewTourButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="yourRequest"
        android:background="@drawable/button"
        android:layout_marginRight="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editButton"
        android:id="@+id/editTourButton"
        android:layout_alignBottom="@+id/viewTourButton"
        android:layout_toRightOf="@+id/viewTourButton"
        android:layout_toEndOf="@+id/viewTourButton"
        android:onClick="edit"
        android:background="@drawable/button"
        android:layout_marginRight="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/status"
        android:id="@+id/statusTourButton"
        android:layout_alignBottom="@+id/editTourButton"
        android:layout_toRightOf="@+id/editTourButton"
        android:layout_toEndOf="@+id/editTourButton" />

</RelativeLayout>
